--- a/paper.bib
+++ b/paper.bib
@@ -1698,3 +1698,30 @@
     pages = "023",
     year = "2023"
 }
+
+@article{Alme:2010ke,
+    author = "Alme, J. and others",
+    title = "{The ALICE TPC, a large 3-dimensional tracking device with fast readout for ultra-high multiplicity events}",
+    eprint = "1001.1950",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1016/j.nima.2010.04.042",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "622",
+    pages = "316--367",
+    year = "2010"
+}
+@article{ALICE:2017svf,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Constraints on jet quenching in p-Pb collisions at $\mathbf{\sqrt{s_{NN}}}$ = 5.02 TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}",
+    eprint = "1712.05603",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2017-324",
+    doi = "10.1016/j.physletb.2018.05.059",
+    journal = "Phys. Lett. B",
+    volume = "783",
+    pages = "95--113",
+    year = "2018"
+}
