--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -4,36 +4,23 @@
 \label{sec:intro}
 
 High-energy nucleus--nucleus (AA) collisions exhibit strong collectivity, which has been observed through anisotropy in the momentum distribution of emitted final-state particles at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and the LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah,ALICE:2022wpn}. This momentum anisotropy is developed by the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP), which emerges from the initial spatial anisotropy in such collisions.
-%The collective effects originate from the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) that is formed at the extreme temperatures created in a collision event. 
-% [Keep it?]
-% This expansion is described by relativistic hydrodynamics~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}, for which the measured anisotropy acts as constraints for the transport properties of the QGP. The understanding of the transport properties has recently been significantly advanced through efforts in experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw} and theoretical studies~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
-The collective nature of the momentum anisotropy is mostly estimated via particle correlations which span over a wide range of pseudorapidity. The collective motion of the emitted particles, which reflects the collectivity of the initial medium, is generally quantified using Fourier expansion, characterizing the so-called ``anisotropic flow''~\cite{Ollitrault:1992bk}. In recent years, long-range correlations have been also observed in smaller collision systems such as high-multiplicity proton--proton (pp)~\cite{ATLAS:2015hzw,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf,ATLAS:2017rtr}, proton--nucleus (pA)~\cite{ALICE:2012eyl,ATLAS:2014qaj,ATLAS:2016yzd,Khachatryan:2016ibd}, and in collisions of light nuclei~\cite{PHENIX:2018lia,Aidala:2017ajz}. 
-%These observations raise the question of to what extent the small-system collisions share a similar underlying mechanism in developing the correlations as heavy AA collisions.
-These observations raise the question of to what extent small-system collisions and heavy-ion collisions share the underlying mechanism, which is responsible for the observed long-range correlations.
-A crucial evidence of a strongly interacting medium in small-system collisions would be the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}. However, this phenomenon has not been observed yet in either high-multiplicity pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. %A study with two-particle angular correlations in a short range around $(\Delta\eta$, $\Delta\varphi)=(0,0)$ is a good tool for studying jet fragmentation~\cite{Adam:2016tsv}.
+The collective nature of the momentum anisotropy is mostly deduced via particle correlations which span over a wide range of pseudorapidity. The collective motion of the emitted particles, which reflects the collectivity of the initial medium, is generally quantified using a Fourier expansion, characterizing the so-called ``anisotropic flow''~\cite{Ollitrault:1992bk}. In recent years, long-range correlations have been also observed in smaller collision systems such as high-multiplicity proton--proton (pp)~\cite{ATLAS:2015hzw,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf,ATLAS:2017rtr}, proton--nucleus (pA)~\cite{ALICE:2012eyl,ATLAS:2014qaj,ATLAS:2016yzd,Khachatryan:2016ibd}, and in collisions of light nuclei~\cite{PHENIX:2018lia,Aidala:2017ajz}. 
+These observations raise the question to what extent small-system collisions and heavy-ion collisions share the underlying mechanism, which is responsible for the observed long-range correlations.
+A crucial evidence of a strongly interacting medium in small-system collisions would be the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}. However, this phenomenon has not yet been observed in either high-multiplicity pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}, possibly due to the current experimental uncertainties being too large to observe it in such small-system collisions.
 
-Current approaches to simulate a heavy-ion collision divide the evolution of the out-of-equilibrium, strongly-coupled, quantum-chromodynamic medium into multiple stages, and each stage is described by an effective theory.  To this date, the combination of color-glass condensate effective field theory (CGC-EFT)~\cite{Schenke:2012wb,Schenke:2012hg}, causal hydrodynamics~\cite{Kolb:2003dz,Song:2007ux,Dusling:2007gi,Holopainen:2010gz,Schenke:2010rr,Romatschke:2007mq,Niemi:2015qia,Jeon:2015dfa,Romatschke:2017ejr}, and a hadronic cascade model~\cite{Bass:1998ca,Bleicher:1999xi,Weil:2016zrk} leads to the most successful description of a wide range of observables in heavy-ion collisions, e.g., particle spectrum, centrality dependence of average particle transverse momentum, and multi-particle correlations~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw,ALICE:2013mez,ALICE:2011ab}. 
-%By employing global Bayesian analyses, our understanding of the underlying theory has advanced such that one can infer the parameters of the multi-stage model, including those quantifying the transport properties of the QGP, using experimental measurements~\cite{Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
-By employing global Bayesian analysis, parameters of the multi-stage model, including those quantifying the transport properties of the QGP, can be constrained using measured data~\cite{Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
+Current approaches to model heavy-ion collisions divide the evolution of the out-of-equilibrium, strongly-coupled, quantum-chromodynamic medium into multiple stages, and each stage is described by an effective theory. To this date, the combination of color-glass condensate effective field theory (CGC-EFT)~\cite{Schenke:2012wb,Schenke:2012hg}, causal hydrodynamics~\cite{Kolb:2003dz,Song:2007ux,Dusling:2007gi,Holopainen:2010gz,Schenke:2010rr,Romatschke:2007mq,Niemi:2015qia,Jeon:2015dfa,Romatschke:2017ejr}, and a hadronic cascade model~\cite{Bass:1998ca,Bleicher:1999xi,Weil:2016zrk} leads to the most successful description of a wide range of observables in heavy-ion collisions, e.g., particle spectra, centrality dependence of average particle transverse momenta, and multi-particle correlations~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw,ALICE:2013mez,ALICE:2011ab}. 
+By employing global Bayesian analyses, parameters of the multi-stage model, including those quantifying the transport properties of the QGP, can be constrained using measured data~\cite{Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
 Despite the studies describing both heavy AA and pA collisions in a single framework~\cite{Moreland:2018gsh}, the origin of the flow-like correlations is still under debate. It is unclear whether the flow-like behavior originates from the early stages of the collision in the realm of applicability of CGC-EFT~\cite{Dusling:2012cg,Bzdak:2013zma} or whether it develops during the collective evolution, where causal hydrodynamics is applicable~\cite{Greif:2017bnr,Mantysaari:2017cni}. Both scenarios may be responsible for the observed correlations in the final state~\cite{Greif:2017bnr}. Although collective models are successful in describing available two-particle correlation data from small-system collisions, they predict an opposite sign for four-particle azimuthal cumulants compared to the experiment~\cite{Khachatryan:2016txc,ATLAS:2017rtr,Zhao:2017rgg}. On the other hand, a semi-analytical toy model based on the Gubser hydrodynamic solution~\cite{Gubser:2010ze,Gubser:2010ui} can explain the two- and four-particle correlations in pp collisions~\cite{Taghavi:2019mqz}. In particular, this model has explained the relationship between the sign of the four-particle cumulants and fluctuations in the initial state~\cite{Taghavi:2019mqz}. 
 
+Besides the models based on the causal hydrodynamic framework, there are other attempts to explain the observed flow-like signals in small-system collisions using alternative descriptions. 
+For instance, a study based on the A Multi-Phase Transport model (AMPT)~\cite{Lin:2004en} leads to satisfactory agreement with the experimental data~\cite{OrjuelaKoop:2015jss}. The applicability of fluid-dynamical simulations and partonic cascade models in small-system collisions was explored in Ref.~\cite{Gallmeister:2018mcn}. In a kinetic theory framework with isotropization-time approximation, it is possible to explain the long-range correlations by fluid-like (hydrodynamic) excitation for Pb--Pb collisions and particle-like (or non-hydrodynamic) excitation for pp or p--Pb collisions~\cite{Kurkela:2019kip,Kurkela:2020wwb,Ambrus:2021fej}. Another potential description for the collectivity in small-system collisions is provided by PYTHIA~8, in which interacting strings repel one another in a transverse direction in a mechanism dubbed as ``string shoving''~\cite{Bierlich:2017vhg,Bierlich:2019ixq}. The repulsion of the strings causes microscopic transverse pressure, giving rise to long-range correlations of particles. The string shoving approach in PYTHIA~8 successfully reproduces the near-side ridge yield observed in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc}. A systematic mapping of correlation effects across collision systems of various sizes is currently underway on the theoretical side, for example, see Ref.~\cite{Schenke:2020mbo}. A quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small-system collisions is given in Refs.~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
 
-Besides the models based on the causal hydrodynamic framework, there are other attempts to explain the flow-like signals in small-system collisions.  
-For instance, a study based on the A Multi-Phase Transport model (AMPT)~\cite{Lin:2004en} leads to satisfactory agreement with the experimental data~\cite{OrjuelaKoop:2015jss}. The applicability of fluid-dynamical simulations and partonic cascade models in small-system collisions was explored in Ref.~\cite{Gallmeister:2018mcn}. In a kinetic theory framework with isotropization-time approximation, it is possible to explain the long-range correlations by fluid-like (hydrodynamic) excitation for Pb--Pb collisions and particle-like (or non-hydrodynamic) excitation for pp or p--Pb collisions~\cite{Kurkela:2019kip,Kurkela:2020wwb,Ambrus:2021fej}. Another potential description for the collectivity in small-system collisions is provided by PYTHIA~8, in which interacting strings repel one another in a transverse direction in a mechanism dubbed as ``string shoving''~\cite{Bierlich:2017vhg,Bierlich:2019ixq}. The repulsion of the strings causes microscopic transverse pressure, giving rise to long-range correlations of particles. The string shoving approach in PYTHIA~8 successfully reproduces the near-side ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc}. A systematic mapping of correlation effects across collision systems of various sizes is currently underway on the theoretical side, for example, see Ref.~\cite{Schenke:2020mbo}. The quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small-system collisions is given in Refs.~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
-
-%Another crucial evidence of a strongly interacting medium in small collision systems would be the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}. However, no evidence has been observed in either high-multiplicity pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. A study with two-particle angular correlations in a short range around $(\Delta\eta$, $\Delta\varphi)=(0,0)$ is a good tool for studying jet fragmentation~\cite{Adam:2016tsv}.
-
-%On the experimental side, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. 
 Measurements of anisotropic flow in small-system collisions are strongly affected by non-flow effects, predominantly originating from correlations among the constituents of jet fragmentation processes.
-In case of two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles. This separation in pseudorapidity is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$-gap method for both two-particle correlations and cumulants removes the non-flow contribution only on the near side and not on the away side~($\Delta\varphi\sim\pi$). Later, a low-multiplicity template-fit method was proposed to remove non-flow contributions on the away-side~\cite{ATLAS:2015hzw, ATLAS:2016yzd, ATLAS:2018ngv}. This method takes into account that the yield of jet fragments increases with increasing particle multiplicity~\cite{CMS:2013ycn, ALICE:2013tla, ALICE:2014mas}.
-By using the template-fit method, the yield of away-side jet fragments can be subtracted, provided that the distribution of jet fragments has a shape that is independent of the chosen multiplicity class and which can be described by the low-multiplicity template. 
-%However, it is possible that the shape of the distribution of away-side jet fragments may be modified with respect to the low-multiplicity template for a given multiplicity selection. The effect of this shape modification, which was previously ignored, will be discussed and quantified in this article.
-
-%This template fit method allows one to subtract the enhanced away-side jet fragments which are estimated from low-multiplicity events, as long as the jet shape is not heavily modified between the template and in the target multiplicity. The previously ignored possible effect driven by the minor observed modification will be quantified.
-%This template fit method allows one to subtract the enhanced away-side jet fragments in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
+In case of two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles. This separation in pseudorapidity is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$-gap method for both two-particle correlations and cumulants removes the non-flow contribution only on the near side ($\Delta\varphi\sim0$) and not on the away side~($\Delta\varphi\sim\pi$). Later, a low-multiplicity template fit method was proposed to remove non-flow contributions on the away-side~\cite{ATLAS:2015hzw, ATLAS:2016yzd, ATLAS:2018ngv}. This method takes into account that the yield of jet fragments increases with increasing particle multiplicity~\cite{CMS:2013ycn, ALICE:2013tla, ALICE:2014mas}.
+By using the template fit method, the yield of away-side jet fragments can be subtracted, provided that the distribution that quantifies the shape of jet fragments is independent of the multiplicity class and therefore can be described by the low-multiplicity template.
 
 As an extension of the studies of the near-side long-range ridge and jet-fragmentation yields in pp collisions at the center-of-mass energy $\sqrt{s}=13$ TeV~\cite{ALICE:2021nir} and in p--Pb collisions at the center-of-mass energy of per nucleon pair $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV~\cite{ALICE:2012eyl,ALICE:2013snk}, this article studies the interplay of jet production and collective effects, i.e., short- and long-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$~TeV and in p--Pb collisions $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV. The article also reports flow coefficients extracted for collisions tagged with different event-scale selections. The event-scale selection requires a minimum transverse momentum of the leading particle or the reconstructed jet at midrapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet provides a measure of the four-momentum transfer ($Q^2$) in the hard-parton scattering~\cite{Chatrchyan:2012tt, Chatrchyan:2011id,ALICE:2022fnb}. The transverse-momentum threshold implies a higher $Q^2$ for the collision. Such events with a large $Q^2$ may, on average, have a lower impact parameter than pp events without any requirement on $Q^2$~\cite{Frankfurt:2003td}.
 
-This article is organized as follows. First, the experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and Sec.~\ref{sec:ana}, respectively. Section~\ref{sec:uncertainties} discusses the systematic uncertainties. The results and their comparison with model calculations are presented in Sec.~\ref{sec:results}. Finally, the results are summarized in~Sec.~\ref{sec:summary}.
+This article is organized as follows. First, the experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and Sec.~\ref{sec:ana}, respectively. Section~\ref{sec:uncertainties} discusses the systematic uncertainties. The results and their comparison with model calculations are presented and discussed in Sec.~\ref{sec:results}. Finally, the results are summarized in~Sec.~\ref{sec:summary}.
 
  
