--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -5,7 +5,7 @@
 
 High-energy nucleus--nucleus (AA) collisions exhibit strong collectivity, which has been observed through anisotropy in the momentum distribution of emitted final-state particles at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and the LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah,ALICE:2022wpn}. This momentum anisotropy is developed by the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP), which emerges from the initial spatial anisotropy in such collisions.
 The collective nature of the momentum anisotropy is mostly deduced via particle correlations which span over a wide range of pseudorapidity. The collective motion of the emitted particles, which reflects the collectivity of the initial medium, is generally quantified using a Fourier expansion, characterizing the so-called ``anisotropic flow''~\cite{Ollitrault:1992bk}. In recent years, long-range correlations have been also observed in smaller collision systems such as high-multiplicity proton--proton (pp)~\cite{ATLAS:2015hzw,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf,ATLAS:2017rtr}, proton--nucleus (pA)~\cite{ALICE:2012eyl,ATLAS:2014qaj,ATLAS:2016yzd,Khachatryan:2016ibd}, and in collisions of light nuclei~\cite{PHENIX:2018lia,Aidala:2017ajz}. 
-These observations raise the question to what extent small-system collisions and heavy-ion collisions share the underlying mechanism, which is responsible for the observed long-range correlations.
+These observations raise the question to what extent do small-system collisions and heavy-ion collisions share the underlying mechanism, which is responsible for the observed long-range correlations.
 A crucial evidence of a strongly interacting medium in small-system collisions would be the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}. However, this phenomenon has not yet been observed in either high-multiplicity pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}, possibly due to the current experimental uncertainties being too large to observe it in such small-system collisions.
 
 Current approaches to model heavy-ion collisions divide the evolution of the out-of-equilibrium, strongly-coupled, quantum-chromodynamic medium into multiple stages, and each stage is described by an effective theory. To this date, the combination of color-glass condensate effective field theory (CGC-EFT)~\cite{Schenke:2012wb,Schenke:2012hg}, causal hydrodynamics~\cite{Kolb:2003dz,Song:2007ux,Dusling:2007gi,Holopainen:2010gz,Schenke:2010rr,Romatschke:2007mq,Niemi:2015qia,Jeon:2015dfa,Romatschke:2017ejr}, and a hadronic cascade model~\cite{Bass:1998ca,Bleicher:1999xi,Weil:2016zrk} leads to the most successful description of a wide range of observables in heavy-ion collisions, e.g., particle spectra, centrality dependence of average particle transverse momenta, and multi-particle correlations~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw,ALICE:2013mez,ALICE:2011ab}. 
