--- a/sec_results.tex
+++ b/sec_results.tex
@@ -28,7 +28,8 @@ These results are comparable to those obtained by ATLAS in different multiplicit
 
 Figure~\ref{fig:v2mult} presents the magnitudes of $v_2$ and $v_3$, as functions of charged-particle multiplicity in the midrapidity ($N_{ch}$ ($|\eta|<0.5$)) for both pp collisions at $\sqrt{s}=13$ TeV and p--Pb collisions at $\sqrt{s_\mathrm{NN}}=5.02$ TeV. As in Fig.~\ref{fig:vn}, the $\Delta\eta$ gap is considered at $1.6<|\Delta\eta|<1.8$ and $v_2$ is measured in $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ for both collision systems. Additionally, the corresponding results for pp collisions at $\sqrt{s}=13$ TeV with $1<p_{\mathrm{T}}<2$ GeV/$c$ are presented. First, it is observed that the magnitude of $v_n$ increases with increasing multiplicity for both collision systems and $p_\mathrm{T}$-ranges. Second, $v_2$ in p--Pb is higher than in pp collisions in the measured multiplicity range. These two observations are compatible with previous results from Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. There is no significant difference between two collision systems in $v_3$ dependence on multiplicity as shown on the right-hand side panel of Fig.~\ref{fig:v2mult}. The $v_3$ measurements exhibit a comparable, subtle dependence on multiplicity, with higher values observed in collisions with greater particle multiplicities.
 For the two different $p_\mathrm{T}$ intervals presented for the pp collisions, the $v_2$ in $1.0<p_\mathrm{T}<4.0$ GeV/$c$ shows a hint of larger magnitude than the $v_2$ in $1.0<p_\mathrm{T}<$~2.0~GeV/$c$. The difference in magnitude is significant only in the highest multiplicity point. 
-This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value in $2.5<p_\mathrm{T}<$~3.0~GeV/$c$. It is found that for the considered $p_\mathrm{T}$ selections, the observed multiplicity dependencies differ only marginally.
+This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value in $2.5<p_\mathrm{T}<$~3.0~GeV/$c$. It is found that for the considered $p_\mathrm{T}$ selections, the observed multiplicity dependencies differ only marginally. 
+It is worth noting that the results presented for pp and p--Pb collisions were obtained from two different beam energies. In \cite{ATLAS:2016yzd}, it was found that the magnitudes of $v_2$ and $v_3$ in pp collisions between 13 and 5.02 TeV show no significant variation with center-of-mass energy.
 
 \subsection{Event-scale dependence of the flow coefficients}
 \begin{figure}[h!]
